@@ -442,7 +442,7 @@ math_log(int argc, VALUE *argv)
 {
     VALUE x, base;
     double d0, d;
-    size_t numbits = 0;
+    size_t numbits;
 
     rb_scan_args(argc, argv, "11", &x, &base);
 
@@ -450,6 +450,9 @@ math_log(int argc, VALUE *argv)
             DBL_MAX_EXP <= (numbits = rb_absint_numwords(x, 1, NULL))) {
         numbits -= DBL_MANT_DIG;
         x = rb_big_rshift(x, SIZET2NUM(numbits));
+    }
+    else {
+	numbits = 0;
     }
 
     Need_Float(x);
@@ -501,12 +504,15 @@ static VALUE
 math_log2(VALUE obj, VALUE x)
 {
     double d0, d;
-    size_t numbits = 0;
+    size_t numbits;
 
     if (RB_BIGNUM_TYPE_P(x) && RBIGNUM_POSITIVE_P(x) &&
             DBL_MAX_EXP <= (numbits = rb_absint_numwords(x, 1, NULL))) {
         numbits -= DBL_MANT_DIG;
         x = rb_big_rshift(x, SIZET2NUM(numbits));
+    }
+    else {
+	numbits = 0;
     }
 
     Need_Float(x);
@@ -540,12 +546,15 @@ static VALUE
 math_log10(VALUE obj, VALUE x)
 {
     double d0, d;
-    size_t numbits = 0;
+    size_t numbits;
 
     if (RB_BIGNUM_TYPE_P(x) && RBIGNUM_POSITIVE_P(x) &&
             DBL_MAX_EXP <= (numbits = rb_absint_numwords(x, 1, NULL))) {
         numbits -= DBL_MANT_DIG;
         x = rb_big_rshift(x, SIZET2NUM(numbits));
+    }
+    else {
+	numbits = 0;
     }
 
     Need_Float(x);
